[package]
name = "arbitrator"
version = "0.1.2"
description = "Format text based on a set of rules and regexes."
license = "GPL-3.0"
repository = "https://github.com/Open-Publishing-Foundation/tools/arbitrator"
keywords = ["text", "troff","groff","typesetting"]
categories = ["command-line-utilities","text-processing"]
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.22"
regex = "1.5.4"
itertools = "0.10.1"
serde_json = "1.0.64"

[profile.release]
lto = true
panic = "abort"